Update main.tex, fine 1

--- a/main.tex
+++ b/main.tex
@@ -54,13 +54,13 @@ Con riferimento al circuito di \textit{Figura 1} utilizzando le seguenti combina
     \item $R = 1 k\Omega, L = 500 mH$ e $C = 10 nF$;
 \end{itemize}
 
-si determini il diagramma di Bode del circuito. Si utilizzi una forma d'onda sinusoidale di ampiezza picco-picco $V_{in}^{pp} = 5 V$ con offset paro a zero ($V_{in}^{of} = 0 V$ ). Si utilizzino frequenze da 1 Hz a 50 kHz opportunamente scelte. Si misuri l'ampiezza della forma d'onda in entrata ($V_{in}^{p}$) ed uscita ($V_{out}^{p}$) e la differenza in fase tra le due forme d'onda. 
+si determini il diagramma di Bode del circuito. Si utilizzi una forma d'onda sinusoidale di ampiezza picco-picco $V_{in}^{pp} = 5 V$ con offset pari a zero ($V_{in}^{of} = 0 V$ ). Si utilizzino frequenze da 1 Hz a 50 kHz opportunamente scelte. Si misuri l'ampiezza della forma d'onda in entrata ($V_{in}^{p}$) ed uscita ($V_{out}^{p}$) e la differenza in fase tra le due forme d'onda. 
 
 Si riportino i risultati in due grafici distinti.
 
 Si verifichi se il comportamento del circuito è coerente con le aspettative.
 
-Si stimi la resistenaza parrasita in serie all'induttore nel caso $R = 1 k\Omega, L = 500 mH$ e $C = 10 nF$.
+Si stimi la resistenza parassita in serie all'induttore nel caso $R = 1 k\Omega, L = 500 mH$ e $C = 10 nF$.
 
 \subsection{Dati sperimentali}
 Di seguito riportiamo due tabelle contenenti le tensioni misurate ad ogni istante di tempo per le diverse combinazioni di R, L e C.
@@ -73,7 +73,7 @@ Oltre a questi dati è stata misurata la tensione \textit{$V_{out}$} nei punti d
 
 I dati raccolti si fermano al raggiungimento di frequenza $f = 10 kHz$ in quanto, avendo a disposizione dei cavi lunghi come collegamento tra la decade di induttanze e la breadbord, essi introducevano una induttanza parassita che rendeva l'uscita (Vout) instabile e quindi difficile da misurare.
 
-A puro scopo didattico, abbiamo provato a visualizzare il segnale d'uscita nell'oscilloscopio quando la frequeza $f = 50 kHz$ e abbiamo notato che ad ogni spostamento dei due fili che collegavano la decade di induttanze con la breadbord, il segnale in uscita mutava di volta in volta.
+A puro scopo didattico, abbiamo provato a visualizzare il segnale d'uscita nell'oscilloscopio quando la frequenza $f = 50 kHz$ e abbiamo notato che ad ogni spostamento dei due fili che collegavano la decade di induttanze con la breadbord, il segnale in uscita mutava di volta in volta.
 
 \subsection{Diagrammi di Bode}
 Di seguito riportiamo i diagrammi di Bode, ampiezza e fase, relativi alle due combinazioni di R, L e C.
@@ -100,13 +100,19 @@ I diagrammi sperimentali per l’ampiezza e per la fase si ottengono rispettivam
 \end{figure}
 \noindent
 
-I diagrammi sono stati generati tramite codice pythom da noi implementato.
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\linewidth]{figures/diagramma_bode_2.png}
+\end{figure}
+\noindent
+
+I diagrammi sono stati generati tramite codice python da noi implementato.
 
 \subsection{Conclusioni}
-Dopo aver calcolato e riportato i diagrammi di Bode per le rispettive combinazioni R, L, e C, possiamo notare come nel primo caso i dati sperimentali rispecchiano l'andamento della curava teorica, a meno di errori sperimentali ;nel secondo caso i punti relativi ai dati sperimentali appaiono sottostanti la curva teorica e inoltre a $f_0$ la tensione $V_{out}^{sperimentale} \ll V_{in}$. Questo avviene perchè possiamo immaginare che l'induttore \textit{L} al suo interno abbia una resistenza parassita che determina il calo di tensione. 
+Dopo aver calcolato e riportato i diagrammi di Bode per le rispettive combinazioni R, L, e C, possiamo notare come nel primo caso i dati sperimentali rispecchiano l'andamento della curava teorica, a meno di errori sperimentali; nel secondo caso i punti relativi ai dati sperimentali appaiono sottostanti la curva teorica e inoltre a $f_0$ la tensione $V_{out}^{sperimentale} \ll V_{in}$. Questo avviene perchè possiamo immaginare che l'induttore \textit{L} al suo interno abbia una resistenza parassita che determina il calo di tensione. 
 Questo avviene perchè l’induttanza è formata da un cavo elettrico attraversato da corrente che si avvolge su se stesso moltissime volte. Più un cavo è lungo più la resistenza parassita è grande
 
-Per trovare questa resistenza parassita possiamo immaginare di avere una resistenza $R_L$ in serie all'induttore $L$; e per trovare il valore di resistenza di $R_L$ possiamo immaginare di togliere per un momento gli elementi circuitali $C$ e $L$ in modo così di avere un partitore resistivo.
+Per trovare questa resistenza parassita possiamo immaginare di avere una resistenza $R_L$ in serie all'induttore $L$ e, per trovare il valore di resistenza di $R_L$, possiamo immaginare di togliere per un momento gli elementi circuitali $C$ e $L$ in modo così di avere un partitore resistivo.
 
 Dalle formule del partitore resistivo: \(V_{out} = \frac{V_{in} \cdot R}{R + R_L}\).
 
